--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -21,10 +21,15 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Install Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install requests selenium webdriver-manager
 
     - name: Run script
       run: python main.py
@@ -33,6 +38,6 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add cmip.txt
-        git commit -m "Auto update cmip.txt" || echo "No changes to commit"
+        git add .
+        git commit -m "Auto update IP lists" || echo "No changes to commit"
         git push
