--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -21,15 +21,17 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Chrome and Utilities
+    - name: Install System Dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable xvfb
 
-    - name: Install dependencies
+    - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests selenium webdriver-manager cloudscraper pyvirtualdisplay
+        pip install requests selenium webdriver-manager cloudscraper pyvirtualdisplay DrissionPage undetected-chromedriver playwright
+        playwright install
+        playwright install-deps
 
     - name: Run script
       run: python main.py
@@ -39,5 +41,5 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
-        git commit -m "Auto update IP lists with test modes" || echo "No changes to commit"
+        git commit -m "Auto update IP lists with new tools" || echo "No changes to commit"
         git push
