--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests selenium webdriver-manager cloudscraper pyvirtualdisplay DrissionPage undetected-chromedriver playwright
+        pip install requests selenium webdriver-manager cloudscraper pyvirtualdisplay DrissionPage undetected-chromedriver playwright beautifulsoup4
         playwright install
         playwright install-deps
 
@@ -41,5 +41,5 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
-        git commit -m "Auto update IP lists with new tools" || echo "No changes to commit"
+        git commit -m "Auto update IP lists with soup parser" || echo "No changes to commit"
         git push
